Scrollbar fix

--- a/Components/EpisodeSelector.razor.css
+++ b/Components/EpisodeSelector.razor.css
@@ -6,7 +6,7 @@
 }
 
 #episode-list {
-    overflow-y: auto;
+    overflow: initial;
     overflow-x: hidden;
     background-color: var(--pp-background-darkest);
     width: 100%;
